# ChangeLog for dev-ruby/request_store
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jan 2015; Hans de Graaff <graaff@gentoo.org> -request_store-1.0.5.ebuild,
  -request_store-1.0.6.ebuild:
  Cleanup.

*request_store-1.0.8 (28 Jul 2014)

  28 Jul 2014; Hans de Graaff <graaff@gentoo.org> -request_store-1.0.7.ebuild,
  +request_store-1.0.8.ebuild:
  Version bump. Drop version broken with recent Rails 3.2 versions.

*request_store-1.0.7 (24 Jul 2014)

  24 Jul 2014; Hans de Graaff <graaff@gentoo.org> +request_store-1.0.7.ebuild:
  Version bump.

*request_store-1.0.6 (13 Jun 2014)

  13 Jun 2014; Hans de Graaff <graaff@gentoo.org> +request_store-1.0.6.ebuild:
  Version bump.

  01 May 2014; Hans de Graaff <graaff@gentoo.org> request_store-1.0.5.ebuild:
  Add ruby20, ruby21.

*request_store-1.0.5 (28 Jun 2013)

  28 Jun 2013; Hans de Graaff <graaff@gentoo.org> +request_store-1.0.5.ebuild,
  +metadata.xml:
  Initial import. New dependency for draper.
