@@ -1,1 +1,2 @@
 DIST request_store-1.0.8.gem 8192 SHA256 94d66de06e7afaec3a7f58e230e7f7d2d8055a7ad6bcef9a36e99ce664ef1b86 SHA512 7b3fa5f04dda7699744f2f3edd1db110070b58754e1f5ff049c273a6c409dbc90b9165d8cabb7e495f721852066f176ab7fa5b4061d8994a7b52838075f756d8 WHIRLPOOL b4485fde929917ab3fb6dcd9a610465b560027ba4c6840f7faea1b5f0bd86d2285a86771495bfde6fe7ac41943f1f6ce55d028ed6e39851115a35e899998c589
+DIST request_store-1.1.0.gem 8192 SHA256 01909a8bf54cdfe2d42ad92aaf94774bb0adc9751f6da73e86212c92b6ecad97 SHA512 5312977aad8f90a554d29cf1b0e6a82384871f0ceb45dcc41ea5e5cd6f580267815c6efba9707b5f2b27b0aebb1c83fe1a8be4990e177d48695e109058b60925 WHIRLPOOL 9333bffaa42c50a1ea32e70f042155a1895290ef6da36c29c02c9e135951d1b586cd604cb06ad97f3afa445e616e5c397744eb70ce82468d75c36a671df24217
