@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*request_store-1.1.0 (28 Jan 2015)
+
+  28 Jan 2015; Hans de Graaff <graaff@gentoo.org> +request_store-1.1.0.ebuild:
+  Version bump.
+
   28 Jan 2015; Hans de Graaff <graaff@gentoo.org> -request_store-1.0.5.ebuild,
   -request_store-1.0.6.ebuild:
   Cleanup.
